tests/invalid/modes_erroneous.err_exp
modes_erroneous.m:020: In clause for `p(in, out)':
modes_erroneous.m:020:   mode error in conjunction. The next two error messages
modes_erroneous.m:020:   indicate possible causes of this error.
modes_erroneous.m:020:
modes_erroneous.m:020:   In clause for `p(in, out)':
modes_erroneous.m:020:   in argument 1 of call to predicate
modes_erroneous.m:020:   `modes_erroneous.p'/2:
modes_erroneous.m:020:   mode error: variable [38;5;87m`V_5'[39;49m has instantiatedness
modes_erroneous.m:020:   [38;5;203m`free',[39;49m
modes_erroneous.m:020:   expected instantiatedness was [38;5;40m`ground'.[39;49m
modes_erroneous.m:020:
modes_erroneous.m:019:   In clause for `p(in, out)':
modes_erroneous.m:019:   in argument 2 of clause head:
modes_erroneous.m:019:   mode error in unification of `HeadVar__2' and `X'.
modes_erroneous.m:019:   Variable [38;5;87m`HeadVar__2'[39;49m has instantiatedness [38;5;171m`free',[39;49m
modes_erroneous.m:019:   variable [38;5;87m`X'[39;49m has instantiatedness [38;5;171m`free'.[39;49m
